Add mission page file

--- a/index.html
+++ b/index.html
@@ -18,38 +18,12 @@
     <link rel="stylesheet/less" type="text/css" href="/v2/assets/books/style/main.less">
 
     <script src="/v2/assets/less/less.js"></script>
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/db/book-text-krsna_search-books_5dce11885650c65d14b4e753e0198e9420be0e79eca5cc68919871c5f94e2ca9.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/font-extra_ec745ab0b030aa945c6ab3e6ef29a588c6176d668d8620785a7b534bd07af5da.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/font_8e7b526f1ee87aaa59084464f8a31d7aef27b4105273e6f5da3fa396b2e4e9bd.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/layout-default-latest_b98d810d4664bcdc3c97a30811ef3cf347eb27238771fcb6cd0e20274ac699d2.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-afterall_4d4359ba4b5a7df1eaed5181f1b8b4ad0e23b43ce58a84a8cb3ff2d6d2950751.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-simplified_094fa0e1b4336e8db2f435ccac40ddf9926541b0cc22b27c3c6fec7dc7d391a6.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-sub-1_6c67b5bde4cf6c6393e763e9e72b43e2850c6705549363b32261635e5c174c1c.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-sub-2_7f326d42c1f7de8fe350fef292a6068b3358888b03515b85d14c0f811367a8f0.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-sub-3_7088241ddf5b7fc3cb0004d7cf71013c1e6ce28beececd3d4350032d23c83be0.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main-sub-4_b974fa8cece928dbe850d375689d54a1a76b6e3fe6e81211bda0f8a96097aa5c.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/main_2f9593859a3a807d81e9f817d1cc2aaf9633b88663fe561200280ab2bc7401f1.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/prettyPhoto_4452fd92436e48b69a2e66d014b861bf1b85490dd863b2d7a12941d90df9078d.css">-->
-<!--    <link rel="stylesheet"-->
-<!--          href="/assets/prod/css/tipTip_8799ce07684364bf182e8f2c63b813ae3113d6ace02bfce946d06834cecf9835.css">-->
 </head>
 <body>
 <div id="app">
     <nav class="navbar navbar-expand-lg bg-body-secondary fixed-top">
-        <div class="d-flex flex-fill justify-content-center align-items-center px-5">
-            <a class="d-flex align-items-center justify-content-center w-10" href="/">
+        <div class="d-flex flex-fill align-items-center px-5">
+            <a class="d-flex align-items-center justify-content-center w-20" href="/#/">
                 <img src="../../v2/assets/KrishnaSearchLogo.png" height="150" >
             </a>
             <form @submit="doSearch" class="d-flex flex-fill justify-content-center">
@@ -66,8 +40,9 @@
                     </div>
                 </div>
             </form>
-            <div class="w-10 d-flex justify-content-center">
-                <button> Our mission</button>
+            <div class="w-20 d-flex justify-content-center nav-list">
+                <a class="me-2" href="/#/mission">Our mission</a>
+                <a href="/v1.php">Old version</a>
             </div>
         </div>
     </nav>
