--- a/v2/routes/Book/Book.html
+++ b/v2/routes/Book/Book.html
@@ -1,7 +1,7 @@
 <div>
     <div class="book d-flex">
         <div class="paragraph-title-list" style="width: 25%;">
-            <h4 class="m-2">{{ book.title }}</h4>
+            <h4 class="p-2 position-sticky top-0 z-3 mb-0">{{ book.title }}</h4>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item list-group-item-action"
                    v-for="(chapter, chapterId) in book.chapters"
